[gd_scene load_steps=12 format=3 uid="uid://dwfivcym0skda"]

[ext_resource type="Script" uid="uid://xqdeok8kyc7q" path="res://scenes/entity/ik/quad_entity.gd" id="1_y8n6e"]
[ext_resource type="Script" uid="uid://cwbvx8yscly3j" path="res://scripts/controler/quad_controller.gd" id="2_y8n6e"]
[ext_resource type="Script" uid="uid://burwyoipe0s80" path="res://scripts/ik/ik_marker.gd" id="3_pks74"]
[ext_resource type="Script" uid="uid://brupvo5tidu6o" path="res://scripts/ik/ik_target_container.gd" id="4_xth7o"]
[ext_resource type="Script" uid="uid://bo2tjvybxxgfg" path="res://scripts/ik/ik_target.gd" id="5_unnlu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mtbid"]
shading_mode = 0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mtbid"]
material = SubResource("StandardMaterial3D_mtbid")
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8bbxt"]
shading_mode = 0
albedo_color = Color(0.089303575, 0.9999998, 0.98359376, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y8n6e"]
material = SubResource("StandardMaterial3D_8bbxt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_akexo"]
shading_mode = 0
albedo_color = Color(0.9380085, 0.9064894, 3.080368e-06, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pks74"]
material = SubResource("StandardMaterial3D_akexo")

[node name="QuadEntity" type="Node3D"]
script = ExtResource("1_y8n6e")

[node name="IKQuadContainer" type="Node3D" parent="."]
script = ExtResource("2_y8n6e")
step_distance = 0.5

[node name="MarkerContainer" type="Node3D" parent="IKQuadContainer"]

[node name="FrontLeftIKMarker" type="Marker3D" parent="IKQuadContainer/MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, 1.5)
script = ExtResource("3_pks74")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="MeshInstance3D" type="MeshInstance3D" parent="IKQuadContainer/MarkerContainer/FrontLeftIKMarker"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_mtbid")

[node name="FrontRightIKMarker" type="Marker3D" parent="IKQuadContainer/MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, 1.5)
script = ExtResource("3_pks74")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="MeshInstance3D2" type="MeshInstance3D" parent="IKQuadContainer/MarkerContainer/FrontRightIKMarker"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_mtbid")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="BackLeftIKMarker" type="Marker3D" parent="IKQuadContainer/MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, -1.5)
script = ExtResource("3_pks74")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="MeshInstance3D3" type="MeshInstance3D" parent="IKQuadContainer/MarkerContainer/BackLeftIKMarker"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_mtbid")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="BackRightIKMarker" type="Marker3D" parent="IKQuadContainer/MarkerContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, -1.5)
script = ExtResource("3_pks74")
metadata/_custom_type_script = "uid://burwyoipe0s80"

[node name="MeshInstance3D4" type="MeshInstance3D" parent="IKQuadContainer/MarkerContainer/BackRightIKMarker"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_mtbid")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="TargetContainer" type="Node3D" parent="IKQuadContainer"]
script = ExtResource("4_xth7o")

[node name="FrontLeftIKTarget" type="Marker3D" parent="IKQuadContainer/TargetContainer" node_paths=PackedStringArray("step_marker", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, 1.5)
top_level = true
script = ExtResource("5_unnlu")
step_marker = NodePath("../../MarkerContainer/FrontLeftIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../BackLeftIKTarget")
opposite_target = NodePath("../BackRightIKTarget")
adjusted_target = true
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"

[node name="FrontRightIKTarget" type="Marker3D" parent="IKQuadContainer/TargetContainer" node_paths=PackedStringArray("step_marker", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, 1.5)
top_level = true
script = ExtResource("5_unnlu")
step_marker = NodePath("../../MarkerContainer/FrontRightIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../BackRightIKTarget")
opposite_target = NodePath("../BackLeftIKTarget")
adjusted_target = true
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"

[node name="BackLeftIKTarget" type="Marker3D" parent="IKQuadContainer/TargetContainer" node_paths=PackedStringArray("step_marker", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, -1.3, -1.5)
top_level = true
script = ExtResource("5_unnlu")
step_marker = NodePath("../../MarkerContainer/BackLeftIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../FrontLeftIKTarget")
opposite_target = NodePath("../FrontRightIKTarget")
adjusted_target = true
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"

[node name="BackRightIKTarget" type="Marker3D" parent="IKQuadContainer/TargetContainer" node_paths=PackedStringArray("step_marker", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, -1.3, -1.5)
top_level = true
script = ExtResource("5_unnlu")
step_marker = NodePath("../../MarkerContainer/BackRightIKMarker")
step_distance = 0.5
adjacent_target = NodePath("../FrontRightIKTarget")
opposite_target = NodePath("../FrontLeftIKTarget")
adjusted_target = true
metadata/_custom_type_script = "uid://bo2tjvybxxgfg"

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="LocalDir" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
visible = false
mesh = SubResource("CapsuleMesh_y8n6e")

[node name="MoveDir" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.1171002)
visible = false
mesh = SubResource("CapsuleMesh_pks74")
